Aktualizace Haskell výpisků a přidání Prolog výpisků.

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ django_vypisky.pdf     - výpisky o webovém frameworku Django (Python)
 haskell_vypisky.pdf    - výpisky o funkcionálním programovacím jazyce Haskell
 html_vypisky.pdf       - výpisky o značkovacím jazyce HTML
 java_vypisky.pdf       - výpisky o programovacím jazyce Java
+prolog_vypisky.pdf     - výpisky o logickém programovacím jazyce Prolog
 python_vypisky.pdf     - výpisky o skriptovacím jazyce Python
 seo_vypisky.pdf        - výpisky o SEO optimalizaci
 unix_vypisky.pdf       - výpisky o operačním systému Unix (Kubuntu)
